--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
+    "test": "tsc && jest ./dist",
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_models src/server.ts"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@types/jest": "^27.0.2",
+    "@types/validator": "^13.7.17",
     "dotenv": "^16.0.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^27.3.0",
+    "typescript": "^4.4.4",
+    "validator": "^13.9.0"
   }
 }
